# fitrobot

./: CMakeLists.txt  README.md  TODO.txt  package.xml  setup.cfg  setup.py  snippets
common/: queue.py  utils.py
data/: station_list.json  station_list.json.bak
fitrobot/: bridge_node.py  check_robot_status.py  check_tf_service.py  client_member_function.py  external_status_getset.py  list_map_client.py  list_map_service.py  list_station_service.py  map_service.py  master_async_service.py  master_service.py  nav2_params_loader.py  nav_through_poses.py  save_map_client.py  save_map_service.py  server_node.py  service_member_function.py  tf_converter_node.py  waypoint_follower.py
launch/: articubot.launch.py  bringup.launch.py  navigation.launch.py  slam.launch.py
maps/: office_res0.02_0523.yaml  office_res0.02_0914.yaml  office_res002_0523.xcf  office_res002_0523_mask2.xcf  office_res002_0914.pgm  office_res002_0914.xcf  office_res002_0914.yaml  turtlebot_house.pgm  turtlebot_house.yaml
masks/: keepout_mask_lino2_office_20240129.pgm  keepout_mask_office_res002_0523.pgm  keepout_mask_office_res002_0523.yaml  keepout_mask_office_res002_0523_2.yaml  keepout_mask_office_res002_0914.pgm  keepout_mask_office_res002_0914.yaml  keepout_mask_office_res002_0914_1.pgm  keepout_mask_office_res002_0914_1.yaml  keepout_mask_office_res002_0914_2.pgm  keepout_mask_office_res002_0914_2.yaml
resource/: loopmusic.sh
script/: bridge.py  robot_navigator.py  robot_navigator_simple.py  tmp_nav2_params_loader.py  waypoint_follower_demo.py  waypoint_manager.py
scripts/: bridge.py  (+1 more)
(+10 files in other folders)
