[options.entry_points]
console_scripts =
    tf_converter_node = fitrobot.tf_converter_node:main
    server_node = fitrobot.server_node:main
    bridge_node = fitrobot.bridge_node:main
    master_service = fitrobot.master_service:main
    save_map_service = fitrobot.save_map_service:main
    list_map_service = fitrobot.list_map_service:main
    waypoint_follower = fitrobot.waypoint_follower:main
    list_station_service = fitrobot.list_station_service:main
    nav2_params_loader = fitrobot.nav2_params_loader:main